--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             $(function(){
             // #で始まるアンカーをクリックした場合に処理
             $('a[href^=#]').click(function() {
-                var headerHight = 100;
+                var headerHight = 79;
                 // スクロールの速度
                 var speed = 200; // ミリ秒
                 // アンカーの値取得
@@ -68,6 +68,50 @@
             </div>            
             <div class="portfolio" id="portfolio">
                 <h2 class="title">Portfolio</h2>
+                <p class="portfolio-text">ここでは僕の作った作品たちを紹介します。興味があれば是非見てあげてください。</p>
+                <div class="portfolio-contents">
+                        <ul class="protfolio-contents-upper">
+                                <li class="product">
+                                    <img class="products-img" src="images/100.jpg" alt="プロダクト画像1">
+                                    <div class="mask">
+                                        <div class="caption">Product No.1</div>
+                                    </div>
+                                </li>
+                                <li class="product">
+                                    <img class="products-img" src="images/100.jpg" alt="プロダクト画像2">
+                                    <div class="mask">
+                                        <div class="caption">Product No.2</div>
+                                    </div>
+                                </li>
+                                <li class="product">
+                                    <img class="products-img" src="images/100.jpg" alt="プロダクト画像3">
+                                    <div class="mask">
+                                        <div class="caption">Product No.3</div>
+                                    </div>
+                                </li>
+                        
+                            </ul>
+                        <ul class="protfolio-contents-under">
+                            <li class="product">
+                                <img class="products-img" src="images/100.jpg" alt="プロダクト画像4">
+                                <div class="mask">
+                                    <div class="caption">Product No.4</div>
+                                </div>
+                            </li>
+                            <li class="product">
+                                <img class="products-img" src="images/100.jpg" alt="プロダクト画像5">
+                                <div class="mask">
+                                    <div class="caption">Product No.5</div>
+                                </div>
+                            </li>
+                            <li class="product">
+                                <img class="products-img" src="images/100.jpg" alt="プロダクト画像6">
+                                <div class="mask">
+                                    <div class="caption">Product No.6</div>
+                                </div>
+                            </li>
+                        </ul>
+                </div>
             </div>
         </main>
 
