--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Portfolio</title>
             <!-- jQuery.jsの読み込み -->
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-
+            <!--アイコンの読み込み-->
+            <script src="https://kit.fontawesome.com/dffdcfea06.js" crossorigin="anonymous"></script>
             <!-- スムーズスクロール部分の記述 -->
             <script>
             $(function(){
@@ -26,14 +27,17 @@
             });
             });
             </script>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body id="home">
         <header class="site-header">
-            <link rel="stylesheet" href="./css/style.css">
+ 
             <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
             
             <h1 class="site-logo" ><a href="index.html">Portfolio</a></h1>
+
             <nav class="gnav">
                 <ul class="gnav-menu">
                     <li class="gnav-menu-items">
@@ -56,8 +60,13 @@
         </header>
         <main>
             <div class="top" id="top">
-                <h1 class="top-title">YPWeb</h1>
-                <img class="bass-img" src="images/ベース　ロゴ白.png" alt="ベース ロゴ" >
+                <h1 class="top-title">Yamato's<br>Portfolio</h1>
+            </div>
+            <div class="top-img">
+                <img class="bass-img" src="images/bassLogo.png" alt="ベース ロゴ" >
+            </div>
+            <div class="top-under">
+
             </div>
             <div class="profile" id="profile">
                 <h2 class="title">Profile</h2>
@@ -68,13 +77,13 @@
             </div>            
             <div class="portfolio" id="portfolio">
                 <h2 class="title">Portfolio</h2>
-                <p class="portfolio-text">ここでは僕の作った作品たちを紹介します。興味があれば是非見てあげてください。</p>
+                <p class="portfolio-text">ここでは僕の作った作品たちを紹介します。</p>
                 <div class="portfolio-contents">
                         <ul class="protfolio-contents-upper">
                                 <li class="product">
-                                    <img class="products-img" src="images/100.jpg" alt="プロダクト画像1">
+                                    <img class="products-img product1" src="images/YPWeb.png" alt="Yamato's Portfolio">
                                     <div class="mask">
-                                        <div class="caption">Product No.1</div>
+                                        <div class="caption">Yamato's Portfolio</div>
                                     </div>
                                 </li>
                                 <li class="product">
@@ -89,30 +98,14 @@
                                         <div class="caption">Product No.3</div>
                                     </div>
                                 </li>
-                        
                             </ul>
-                        <ul class="protfolio-contents-under">
-                            <li class="product">
-                                <img class="products-img" src="images/100.jpg" alt="プロダクト画像4">
-                                <div class="mask">
-                                    <div class="caption">Product No.4</div>
-                                </div>
-                            </li>
-                            <li class="product">
-                                <img class="products-img" src="images/100.jpg" alt="プロダクト画像5">
-                                <div class="mask">
-                                    <div class="caption">Product No.5</div>
-                                </div>
-                            </li>
-                            <li class="product">
-                                <img class="products-img" src="images/100.jpg" alt="プロダクト画像6">
-                                <div class="mask">
-                                    <div class="caption">Product No.6</div>
-                                </div>
-                            </li>
                         </ul>
                 </div>
             </div>
+            <ul class="snsbtniti">
+                <li><a href="https://twitter.com/bass_base_3d" class="flowbtn3 fl_tw1"><i class="fab fa-twitter"></i><div>Twitter</div></a></li>
+                <li><a href="./EmailForm.html" class="flowbtn3 fl_ma1"><i class="far fa-envelope"></i><div>Contact</div></a></li>
+            </ul>
         </main>
 
         <footer>
