--- a/EmailTest.html
+++ b/EmailTest.html
@@ -47,7 +47,7 @@
                 <textarea name="message"></textarea>
                 <input type="text" name="honeypot" style="display:none">
                 <input type="hidden" name="accessKey" value="d65d1d8d-c20a-4d32-b153-0ebdc1c5ade6">
-                <input type="hidden" name="subject" value="ポートフォリオからの問い合わせ">
+                <input type="hidden" name="subject" value="Contact us from - example.com">
                 <input type="hidden" name="replyTo" value="@">
                 <input type="hidden" name="redirectTo" value="./index.html">
                 <input type="submit" value="Submit">
