メール送信後のメッセージ追加

--- a/EmailEnd.html
+++ b/EmailEnd.html
@@ -41,17 +41,18 @@
 
         </header>
         <main> 
-            <form action="https://api.staticforms.xyz/submit" method="post">
-                <input type="text" name="name" placeholder="Your Name">
-                <input type="text" name="email" placeholder="Your Email">
-                <textarea name="message"></textarea>
-                <input type="text" name="honeypot" style="display:none">
-                <input type="hidden" name="accessKey" value="d65d1d8d-c20a-4d32-b153-0ebdc1c5ade6">
-                <input type="hidden" name="subject" value="Contact us from - example.com">
-                <input type="hidden" name="replyTo" value="@">
-                <input type="hidden" name="redirectTo" value="./index.html">
-                <input type="submit" value="Submit">
-              </form>
+            <div class="EndMessage">
+                <h1 class="EndMessage-text">お問い合わせありがとうございました。</h1> 
+                <div class="home-btn">
+                    <div clas="btn">
+                        <div class="btn-wrap">
+                            <a href="./index.html" class="btn btn-border-shadow">Home</a>
+                        </div>        
+                    </div>
+                </div>
+
+            </div>
+
 
             
             <ul class="snsbtniti">
