--- a/EmailForm.html
+++ b/EmailForm.html
@@ -72,7 +72,7 @@
             
             <ul class="snsbtniti">
                 <li><a href="https://twitter.com/bass_base_3d" class="flowbtn3 fl_tw1"><i class="fab fa-twitter"></i><div>Twitter</div></a></li>
-                <li><a href="./EmailForm.html" class="flowbtn3 fl_ma1"><i class="far fa-envelope"></i><div>Contact</div></a></li>
+                <li><a href="https://iiyama0209.github.io/YamatoPortfolio/EmailEnd.html" class="flowbtn3 fl_ma1"><i class="far fa-envelope"></i><div>Contact</div></a></li>
             </ul>
         </main>
 
