--- a/EmailForm.html
+++ b/EmailForm.html
@@ -62,7 +62,7 @@
                     </div>
                     <input type="hidden" name="subject" value="ポートフォリオからの問い合わせ">
                     <input type="hidden" name="replyTo" value="@">
-                    <input type="hidden" name="redirectTo" value="./index.html">
+                    <input type="hidden" name="redirectTo" value="https://iiyama0209.github.io/YamatoPortfolio/EmailEnd.html">
                     <input type="submit" value="送信する">
                 </div>
                 
@@ -72,7 +72,7 @@
             
             <ul class="snsbtniti">
                 <li><a href="https://twitter.com/bass_base_3d" class="flowbtn3 fl_tw1"><i class="fab fa-twitter"></i><div>Twitter</div></a></li>
-                <li><a href="https://iiyama0209.github.io/YamatoPortfolio/EmailEnd.html" class="flowbtn3 fl_ma1"><i class="far fa-envelope"></i><div>Contact</div></a></li>
+                <li><a href="./EmailForm.html" class="flowbtn3 fl_ma1"><i class="far fa-envelope"></i><div>Contact</div></a></li>
             </ul>
         </main>
 
