SNSアイコン間隔調整 プロフィールアイコン調整 プロフィールテキスト修正

--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
                 <h2 class="title">Profile</h2>
                 <div class='profile-contents'>
                     <p class="logo-img"></p>
-                    <p class="profile-text">岐阜県出身の情報系大学院生。大学１年の時にC言語を授業で勉強したことをきっかけにプログラミングと出会いのらりくらりと勉強中。</p>
+                    <p class="profile-text">
+                        【名前】飯田大和<br>
+                        【出身】岐阜県<br>
+                        【生年月日】1997/02/09<br>
+                        【学歴】情報系大学院生<br>
+                        【趣味】ベースを弾くこと、３Dプリンターでのものづくり、ゲーム<br>
+                        【主な使用言語】C,C++,c#,Python,html&CSS   
+                    </p>
                 </div>
             </div>            
             <div class="portfolio" id="portfolio">
