作品紹介ページ追加

--- a/EmailForm.html
+++ b/EmailForm.html
@@ -29,16 +29,24 @@
             </script>
 
         <link rel="stylesheet" href="./css/style.css">
+
     </head>
     <body id="home">
         <header class="site-header">
- 
             <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
             
             <h1 class="site-logo" ><a href="index.html">Portfolio</a></h1>
 
-
+            <nav class="gnav">
+                <ul class="gnav-menu">
+                    <li class="gnav-menu-items">
+                        <div class="btn-wrap">
+                            <a href="./index.html" class="btn btn-border-shadow">Home</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <main> 
             <form action="https://api.staticforms.xyz/submit" method="post">
