--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="portfolio-contents">
                         <ul class="protfolio-contents-upper">
                                 <li class="product">
-                                    <img class="products-img product1" src="images/YPWeb.png" alt="Yamato's Portfolio">
+                                    <a href="./HP.html"><img class="products-img product1" src="images/YHP.png" alt="Yamato's Portfolio" ></a>
                                     <div class="mask">
                                         <div class="caption">Yamato's Portfolio</div>
                                     </div>
@@ -106,7 +106,7 @@
                                 </li>
                             </ul>
                         </ul>
-                </div>
+                </div> 
             </div>
             <ul class="snsbtniti">
                 <li><a href="https://twitter.com/bass_base_3d" class="flowbtn3 fl_tw1"><i class="fab fa-twitter"></i><div>Twitter</div></a></li>
