紹介ページ追加

--- a/RobotArm.html
+++ b/RobotArm.html
@@ -50,36 +50,35 @@
         </header>
         <main> 
             <div class="PF-intro">
-                <h1 class="PF-title">ポートフォリオサイト</h1>
+                <h1 class="PF-title"></h1> <!-作品タイトル->
                 <div class="PF-img-div">
-                    <img class="PF-img" src="images/YHP.png" alt="Yamato's Portfolio" border="4">
+                    <img class="HP-img" src="images/" alt="RobotArm" border="4">
                 </div>
                 <div class="PF-text">
                     <div class="PF-main-text">
                         <h2 class="subtitle">-作品説明-<br></h2>
                         <p>
-                            僕の作った作品を紹介するためのポートフォリオサイトです.<br>
-                            HTML＆CSSの練習も兼ねて１から自作しました。<br>
+
                         </p>
                         <h2 class="subtitle">-使用ツール-</h2>
                         <p>
-                            VScode,SurceTree<br>
+
                         </p>
                         <h2 class="subtitle">-開発言語-</h2>
                         <p>
-                            HTML,CSS,Javascript<br>
+
                         </p>
                         <h2 class="subtitle">-工夫したところ-</h2>
                         <p>
-                            ナビバーを画面上部に固定することで、スクロール<br>
-                            しても常に表示されるようにしたところ。
+
                         </p>
-                        <p>
-                            全体的にポップなイメージにまとめ統一感を出したところ。
-                        </p>
+
                     </div>    
                 </div>
             </div>
+
+
+            
             <ul class="snsbtniti">
                 <li><a href="https://twitter.com/bass_base_3d" class="flowbtn3 fl_tw1"><i class="fab fa-twitter"></i><div>Twitter</div></a></li>
                 <li><a href="./EmailForm.html" class="flowbtn3 fl_ma1"><i class="far fa-envelope"></i><div>Contact</div></a></li>
