--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                         【出身】岐阜県<br>
                         【生年月日】1997/02/09<br>
                         【学歴】情報系大学院生<br>
-                        【趣味】ベースを弾くこと、３Dプリンターでのものづくり、ゲーム<br>
-                        【主な使用言語】C,C++,c#,Python,html&CSS   
+                        【趣味】ベースを弾くこと、３Dプリンターでのものづくり<br>
+                        【主な使用言語】C,C++,C#,Python,html&CSS<br>   
+                        【好きなゲーム】スマブラ、ウマ娘、ダークソウル
                     </p>
                 </div>
             </div>            
@@ -87,19 +88,19 @@
                 <div class="portfolio-contents">
                         <ul class="protfolio-contents-upper">
                                 <li class="product">
-                                    <a href="./HP.html"><img class="products-img product1" src="images/YHP.png" alt="Yamato's Portfolio" ></a>
+                                    <a href="./HP.html"><img class="products-img product1" src="images/YHP.png" alt="Yamato's Portfolio" border ="3"></a>
                                     <div class="mask">
                                         <div class="caption">Yamato's Portfolio</div>
                                     </div>
                                 </li>
                                 <li class="product">
-                                    <img class="products-img" src="images/100.jpg" alt="プロダクト画像2">
+                                    <a href="./RobotArm.html"><img class="products-img" src="images/ロボットアーム.JPG" alt="プロダクト画像2" border="3"></a>
                                     <div class="mask">
-                                        <div class="caption">Product No.2</div>
+                                        <div class="caption">ロボットアーム</div>
                                     </div>
                                 </li>
                                 <li class="product">
-                                    <img class="products-img" src="images/100.jpg" alt="プロダクト画像3">
+                                    <img class="products-img" src="images/100.jpg" alt="プロダクト画像3" border="3">
                                     <div class="mask">
                                         <div class="caption">Product No.3</div>
                                     </div>
