--- a/Format.html
+++ b/Format.html
@@ -49,7 +49,33 @@
 
         </header>
         <main> 
+            <div class="PF-intro">
+                <h1 class="PF-title"></h1> <!-作品タイトル->
+                <div class="PF-img-div">
+                    <img class="HP-img" src="images/" alt="Yamato's Portfolio" border="4">
+                </div>
+                <div class="PF-text">
+                    <div class="PF-main-text">
+                        <h2 class="subtitle">-作品説明-<br></h2>
+                        <p>
 
+                        </p>
+                        <h2 class="subtitle">-使用ツール-</h2>
+                        <p>
+
+                        </p>
+                        <h2 class="subtitle">-開発言語-</h2>
+                        <p>
+
+                        </p>
+                        <h2 class="subtitle">-工夫したところ-</h2>
+                        <p>
+
+                        </p>
+
+                    </div>    
+                </div>
+            </div>
 
 
             
