--- a/RobotArm.html
+++ b/RobotArm.html
@@ -49,30 +49,41 @@
 
         </header>
         <main> 
-            <div class="PF-intro">
-                <h1 class="PF-title"></h1> <!-作品タイトル->
+            <div class="AR-intro">
+                <h1 class="PF-title">ロボットアーム</h1> <!-作品タイトル->
                 <div class="PF-img-div">
-                    <img class="HP-img" src="images/" alt="RobotArm" border="4">
+                    <img class="PF-img" src="images/ロボットアーム.JPG" alt="RobotArm" border="4">
                 </div>
                 <div class="PF-text">
                     <div class="PF-main-text">
                         <h2 class="subtitle">-作品説明-<br></h2>
                         <p>
-
+                            ３Dプリンターを使って制作したロボットアームです。
                         </p>
                         <h2 class="subtitle">-使用ツール-</h2>
                         <p>
-
+                            Fusion360,UltimakerCura,Arduino,Ender3(3Dプリンター)
                         </p>
                         <h2 class="subtitle">-開発言語-</h2>
                         <p>
-
+                            Arduino
                         </p>
                         <h2 class="subtitle">-工夫したところ-</h2>
                         <p>
-
+                            ロボットを自作したのは初めてだったので、わからないことばかりでひたすら<br>
+                            試行錯誤しました。特に、モーターのパワーに合わせて腕の長さを設計したり、<br>
+                            全体のデザインを最適化して行くのが大変でした。<br>
+                            詳しくは制作過程の紹介記事のリンクを載せておくので是非見てください。
                         </p>
-
+                        <h2 class="subtitle">-作品制作記事-</h2>
+                        <a href="https://note.com/bass_base/n/na8b7dbb8fb64"><p>https://note.com/bass_base/n/na8b7dbb8fb64</p></a>
+                        <h2 class="subtitle">-動画-</h2>
+                        <iframe width="560" height="315" 
+                        src="https://www.youtube.com/embed/yJ38FRpNKpc" 
+                        title="YouTube video player" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; 
+                        encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                       </iframe>
                     </div>    
                 </div>
             </div>
