--- a/RobotArm.html
+++ b/RobotArm.html
@@ -52,7 +52,7 @@
             <div class="AR-intro">
                 <h1 class="PF-title">ロボットアーム</h1> <!-作品タイトル->
                 <div class="PF-img-div">
-                    <img class="PF-img" src="images/ロボットアーム.JPG" alt="RobotArm" border="4">
+                    <img class="PF-img" src="images/RobotArm.JPG" alt="RobotArm" border="4">
                 </div>
                 <div class="PF-text">
                     <div class="PF-main-text">
