--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     </div>
                                 </li>
                                 <li class="product">
-                                    <a href="./RobotArm.html"><img class="products-img" src="images/ロボットアーム.JPG" alt="プロダクト画像2" border="3"></a>
+                                    <a href="./RobotArm.html"><img class="products-img" src="images/RobotArm.JPG" alt="プロダクト画像2" border="3"></a>
                                     <div class="mask">
                                         <div class="caption">ロボットアーム</div>
                                     </div>
