--- a/Format.html
+++ b/Format.html
@@ -50,7 +50,7 @@
         </header>
         <main> 
             <div class="PF-intro">
-                <h1 class="PF-title">ロボットアーム</h1> <!-作品タイトル->
+                <h1 class="PF-title"></h1> <!-作品タイトル->
                 <div class="PF-img-div">
                     <img class="PF-img" src="images/" alt="Yamato's Portfolio" border="4">
                 </div>
