--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class='profile-contents'>
                     <p class="logo-img"></p>
                     <p class="profile-text">
-                        【名前】飯田大和<br>
+                        【名前】やまと<br>
                         【出身】岐阜県<br>
                         【生年月日】1997/02/09<br>
                         【学歴】情報系大学院生<br>
