profileコメント追加

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
                         【学歴】情報系大学院生<br>
                         【趣味】ベースを弾くこと、３Dプリンターでのものづくり<br>
                         【主な使用言語】C,C++,C#,Python,html&CSS<br>   
-                        【好きなゲーム】スマブラ、ウマ娘、ダークソウル
+                        【好きなゲーム】スマブラ、ウマ娘、ダークソウル<br>
+                        【コメント】<br>
+                        　木工、電子工作、プログラミング、３Dプリンターなど、ものづくりがなんでも大好きな
+                        大学院生です。現在はものづくりを仕事にできるよう就活しています。
                     </p>
                 </div>
             </div>            
