--- a/HP.html
+++ b/HP.html
@@ -87,8 +87,10 @@
         </main>
 
         <footer>
-            ©︎2020　yamato<br>
-            <a href="https://www.freepik.com/vectors/background">Background vector created by freepik - www.freepik.com</a>
+            <div class="footer-text">
+                ©︎2020　yamato<br>
+                <a href="https://www.freepik.com/vectors/background">Background vector created by freepik - www.freepik.com</a>
+            </div>
         </footer>
     </body>
 </html>
