--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     </div>
                                 </li>
                                 <li class="product">
-                                    <img class="products-img" src="images/100.jpg" alt="プロダクト画像3" border="3">
+                                    <img class="products-img" src="images/101.jpg" alt="プロダクト画像3" border="3">
                                     <div class="mask">
                                         <div class="caption">Product No.3</div>
                                     </div>
@@ -119,7 +119,7 @@
         </main>
 
         <footer>
-            ©︎2020　yamato<br>
+            <p>©︎2020　yamato<br>
             <a href="https://www.freepik.com/vectors/background">Background vector created by freepik - www.freepik.com</a>
         </footer>
     </body>
