--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
                     <p class="logo-img"></p>
                     <p class="profile-text">
                         【名前】やまと<br>
-                        【出身】岐阜県<br>
-                        【生年月日】1997/02/09<br>
+                        【誕生日】02/09<br>
                         【学歴】情報系大学院生<br>
                         【趣味】ベースを弾くこと、３Dプリンターでのものづくり<br>
                         【主な使用言語】C,C++,C#,Python,html&CSS<br>   
